[BRAMAH] Switch to platformio

--- a/bramah/arduino-micro/playground/dichotomickbd/platformio.ini
+++ b/bramah/arduino-micro/playground/dichotomickbd/platformio.ini
@@ -21,6 +21,11 @@
 platform=atmelavr
 framework=arduino
 board=micro
+lib_deps=
+  Wire
+  Crypto
 
-[platformio]
-src_dir=.
+[env:native]
+platform=native
+lib_deps=
+  DichotomicKeyboard
