--- a/epicene/Cargo.toml
+++ b/epicene/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Jérôme Prudent <jprudent@gmail.com>"]
 
 [dependencies]
+piston = "0.27.0"
+piston2d-graphics = "0.19.0"
+pistoncore-glutin_window = "0.33.0"
+piston2d-opengl_graphics = "0.36.0"
